objects/MDPERSONATOR__MD_globalResponse__c.object
<CustomObject>
    <description>An object that stores the XML response from the Global Address Check web service.</description>
    <fields>
        <fullName>MDPERSONATOR__AddressKey__c</fullName>
        <label>AddressKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine2__c</fullName>
        <label>AddressLine2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine3__c</fullName>
        <label>AddressLine3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressType__c</fullName>
        <label>AddressType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AdministrativeArea__c</fullName>
        <label>AdministrativeArea</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Building__c</fullName>
        <label>Building</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Company__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Company</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryISO3166_1_Alpha2__c</fullName>
        <label>CountryISO3166_1_Alpha2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryISO3166_1_Alpha3__c</fullName>
        <label>CountryISO3166_1_Alpha3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryISO3166_1_Numeric__c</fullName>
        <label>CountryISO3166_1_Numeric</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryName__c</fullName>
        <label>CountryName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountrySubdivisionCode__c</fullName>
        <label>CountrySubdivisionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DST__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>DST</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentLocality__c</fullName>
        <label>DependentLocality</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfareLeadingType__c</fullName>
        <label>DependentThoroughfareLeadingType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfareName__c</fullName>
        <label>DependentThoroughfareName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfarePostDirection__c</fullName>
        <label>DependentThoroughfarePostDirection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfarePreDirection__c</fullName>
        <label>DependentThoroughfarePreDirection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfareTrailingType__c</fullName>
        <label>DependentThoroughfareTrailingType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DependentThoroughfare__c</fullName>
        <label>DependentThoroughfare</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainName__c</fullName>
        <label>DomainName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DoubleDependentLocality__c</fullName>
        <label>DoubleDependentLocality</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EmailResults__c</fullName>
        <label>EmailResults</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FormattedAddress__c</fullName>
        <label>FormattedAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Gender2__c</fullName>
        <label>Gender2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Gender__c</fullName>
        <label>Gender</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__InternationalPhoneNumber__c</fullName>
        <label>InternationalPhoneNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Language__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Language</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Locality__c</fullName>
        <label>Locality</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MailboxName__c</fullName>
        <label>MailboxName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameFirst2__c</fullName>
        <label>NameFirst2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameFirst__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>NameFirst</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameLast2__c</fullName>
        <label>NameLast2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameLast__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>NameLast</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameMiddle2__c</fullName>
        <label>NameMiddle2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameMiddle__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>NameMiddle</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NamePrefix2__c</fullName>
        <label>NamePrefix2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NamePrefix__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>NamePrefix</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameSuffix2__c</fullName>
        <label>NameSuffix2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameSuffix__c</fullName>
        <label>NameSuffix</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Organization__c</fullName>
        <label>Organization</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneAdministrativeArea__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneAdministrativeArea</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneCallerID__c</fullName>
        <label>PhoneCallerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneCarrier__c</fullName>
        <label>PhoneCarrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneCountryDialingCode__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneCountryDialingCode</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneCountryName__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneCountryName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneInternationalPrefix__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneInternationalPrefix</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneLatitude__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneLatitude</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneLocality__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneLocality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneLongitude__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneLongitude</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneNationPrefix__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneNationPrefix</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneNationalDestinationCode__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneNationalDestinationCode</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneNumber__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneNumber</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneSubscriberNumber__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>PhoneSubscriberNumber</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostBox__c</fullName>
        <label>PostBox</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PremisesNumber__c</fullName>
        <label>PremisesNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PremisesType__c</fullName>
        <label>PremisesType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubAdministrativeArea__c</fullName>
        <label>SubAdministrativeArea</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubNationalArea__c</fullName>
        <label>SubNationalArea</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubPremisesNumber__c</fullName>
        <label>SubPremisesNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubPremisesType__c</fullName>
        <label>SubPremisesType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SubPremises__c</fullName>
        <label>SubPremises</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfareLeadingType__c</fullName>
        <label>ThoroughfareLeadingType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfareName__c</fullName>
        <label>ThoroughfareName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfarePostDirection__c</fullName>
        <label>ThoroughfarePostDirection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfarePreDirection__c</fullName>
        <label>ThoroughfarePreDirection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ThoroughfareTrailingType__c</fullName>
        <label>ThoroughfareTrailingType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Thoroughfare__c</fullName>
        <label>Thoroughfare</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TopLevelDomainName__c</fullName>
        <label>TopLevelDomainName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TopLevelDomain__c</fullName>
        <label>TopLevelDomain</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TransmissionResults__c</fullName>
        <label>TransmissionResults</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UTC__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>UTC</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Version__c</fullName>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__contactIdExtID__c</fullName>
        <externalId>true</externalId>
        <label>contactIdExtID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MD_globalResponse</label>
    <nameField>
        <label>MD_globalResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_globalResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>